	  More work is needed.  The initial commit is little more than the
	  SAM3U-EK with name changes (2014-3-10).
	* configs/spark: Refresh all spark configurations (2014-3-11).
	* arch/arm/src/tiva/chip/tm4c_memorymap.h:  Fix typos reported by
	  Daniel Pereira de Carvalho (2014-2-12).
	* arch/arm/src/sam34/sam_emac.c:  Add an Ethernet MAC driver for the
	  SAM4E.  The initial checkin is essentially the SAMA5D3 EMAC driver
	  with naming changes as appropriate (2014-3-12).
	* arch/arm/src/sam34/sam_cmcc.c:  Add logic to manage the Cortex-M
	  Cache Control block.  Untested on initial check-in (2014-3-12).
	* arch/arm/src/sam34/sam_emac.c:  Fix EMAC pin configuration (was been
	  set up for RMII instead of MII).  Now the driver EMAC appears to be
	  functional (2014-3-13).
	* configs/sam4e-ek/nsh:  Networking support is now enabled by default
	  in the NSH configuration (2014-3-13).
	* arch/arm/src/sam34/sam_spi.c:  Backported the SAMA5 SPI driver to
	  the SAM3/4 architecture.  The SAMA5 version supports both multiple
	  SPI peripherals as needed by the SAM3A and SAM3X and also supports
	  DMAC (but not PDC).  The initial commit is untested and may very
	  well have (temporarily) broken SPI for the SAM3/4/ family (2014-3-13).
	* configs/sam4e-ek/src/sam_at25.c and sam_hsmci.c:  Added support for
	  the AT25 serial FLASH.  Restructured the logic that registers the
	  HSMCI block driver (2014-3-13).
	* arch/arm/src/sam34/sam_dmac.c and sam_spi.c:  Fixes to DMA in general
	  and to SPI in particular (2014-3-14).
	* configs/sam4e-ek/nsh:  DMA-based SPI and a FAT file system on the
	  AT25 Serial FLASH are now supported by default in the NSH configuration
	  (2014-3-14).
	* sched/nanosleep.c:  Fix a missing call to re-enable interrupts.  From
	  Jason Jiang (2014-3-15).

7.2 2014-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/sam34/sam_udp.c and .h:  Add a USB full speed device
	  driver (UDP) for the SAM4E (2014-3-17).
