@@ -7007,4 +7007,6 @@
 
 	* arch/arm/src/sam34/sam_udp.c and .h:  Add a USB full speed device
 	  driver (UDP) for the SAM4E (2014-3-17).
+	* Documentation/NuttxPortingGuide.html:  Typo fixes from Vijay Kumar
+	  (2014-3-18).
 
